# Refs:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#dependencies-management-in-setuptools

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai"
version = "0.2.3"
description = "AI and ML workflows module for scientific digital twins."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ml", "ai", "hpc"]
maintainers = [
    { name = "Matteo Bunino", email = "matteo.bunino@cern.ch" },
    { name = "Jarl Sondre Sæther", email = "jarl.sondre.saether@cern.ch" },
    { name = "Anna Lappe", email = "anna.elisa.lappe@cern.ch" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

dependencies = [
    "wandb",
    "mlflow",
    "jsonargparse[signatures]",
    "pyyaml",
    "omegaconf",
    "rich>=13.5.3",
    "typer>=0.9.0",
    "wheel",
    "pydantic",
    "prov4ml@git+https://github.com/matbun/ProvML@new-main",
    "pandas",
    "seaborn",
    "ray[default,train,tune]",
]

# dynamic = ["version", "description"]

[project.optional-dependencies]
torch = [
    "torch==2.4.*",
    "lightning==2.*",
    "torchmetrics>=1.6.0",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
]
dev = [
    "pytest>=7.4.2",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "ipykernel",
    "ipython",
    "isort",
    "tensorflow==2.16.*",  # needed by tests on tensorboard
]
docs = [
    "sphinx-rtd-theme==2.0.0",
    "nbsphinx==0.9.4",
    "myst-parser==2.0.0",
    "IPython",
    "tensorflow==2.16.*",
]
hpo = [
    "bayesian-optimization==2.0.*",
    "hyperopt==0.2.*",
    "ConfigSpace==1.2.*",
    "hpbandster==0.7.*",
    "scipy==1.14.*",
    "GPy==1.13.*"
]
macos = ["prov4ml[apple]@git+https://github.com/matbun/ProvML@new-main"]
nvidia = ["prov4ml[nvidia]@git+https://github.com/matbun/ProvML@new-main"]
amd = ["prov4ml[amd]@git+https://github.com/matbun/ProvML@new-main"]

[project.urls]
Homepage = "https://www.intertwin.eu/"
Documentation = "https://itwinai.readthedocs.io/"
Repository = "https://github.com/interTwin-eu/itwinai"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
itwinai = "itwinai.cli:app"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.pytest.ini_options]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "hpc: needs SLURM and HPC resources (multiple GPUs/nodes). (deselect with '-m \"not hpc\"')",
    "torch_dist: runs with torch DDP distributed strategy. (deselect with '-m \"not torch_dist\"')",
    "deepspeed_dist: runs with torch DeepSpeed distributed strategy. (deselect with '-m \"not deepspeed_dist\"')",
    "horovod_dist: runs with torch Horovod distributed strategy. (deselect with '-m \"not horovod_dist\"')",
    "functional: functional tests. (deselect with '-m \"not functional\"')",
    "memory_heavy: high memory footprint. (deselect with '-m \"not heavy_memory\"')",
]

# [tool.isort]
# profile = "black"
# known_first_party = ["itwinai"]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
