# Refs:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#dependencies-management-in-setuptools

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai"
version = "0.3.4"
description = "AI and ML workflows module for scientific digital twins."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ml", "ai", "hpc"]
maintainers = [
  { name = "Matteo Bunino", email = "matteo.bunino@cern.ch" },
  { name = "Jarl Sondre Sæther", email = "jarl.sondre.saether@cern.ch" },
  { name = "Anna Lappe", email = "anna.elisa.lappe@cern.ch" },
  { name = "Linus Eickhoff", email = "linus.maximilian.eickhoff@cern.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

dependencies = [
  "rich>=13.5.3",
  "typer>=0.9.0",
  "numpy<2.0.0",
  "wandb>=0.18.7",
  "mlflow>=2.17.2",
  "wheel>=0.45.0",
  "seaborn>=0.13.2",
  "py-cpuinfo>=9.0.0",
  "packaging>=24.2",
  "pydantic>=2.10.2",
  "pyyaml>=6.0.2",
  "omegaconf>=2.3.0",
  "jsonargparse[signatures]>=4.34.0",
  "matplotlib>=3.9.2",
  "pip>=24.3.1",
  "ray[default,train,tune]>=2.43.0",
  "tensorboard>=2.16.2",
  "hydra-core>=1.3.2",
  "pynvml>=12.0.0",
  "py-spy>=0.4.0",
  "tabulate>=0.9.0",
  "click==8.1.8",
  "validators>=0.35.0",
]

[project.optional-dependencies]
# Has to be added as an optional dependency, when installed in non-AMD environments, the torch
# import will fail as it tries to find the related AMD libs of amdsmi.
amd = ["amdsmi>=6.4.0"]
torch = [
  "torch==2.6.*",
  "lightning>=2",
  "torchmetrics>=1.6.0",
  "torchvision>=0.16.2",
  "torchaudio>=2.4.0",
  "torch-fidelity>=0.3.0",
  "torchrun-jsc>=0.0.18",
]
tf = ["tensorflow==2.16.*", "tf_keras==2.16.*"]
tf-cuda = ["tensorflow[and-cuda]==2.16.*", "tf_keras==2.16.*"]
dev = [
  "pytest>=7.4.2",
  "pytest-mock>=3.11.1",
  "pytest-cov>=4.1.0",
  "ipykernel>=6.29.5",
  "ipython>=8.30.0",
  "ruff>=0.8.3",
  "psutil>=6.1.0",
  "pytest-xdist>=3.6.1",
]
docs = [
  "sphinx-rtd-theme>=2.0.0",
  "nbsphinx>=0.9.4",
  "myst-parser>=2.0.0",
  "IPython>=8.30.0",
  "sphinx-tabs>=3.4.7",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
]
hpo = [
  "bayesian-optimization>=2.0.0",
  "hyperopt>=0.2.0",
  "ConfigSpace>=1.2.0",
  "hpbandster>=0.7.0",
  "gpy>=1.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true


# Git dependencies are not supported by PyPI and will prevent pushing new versions to it.
# prov4ml = ["prov4ml@git+https://github.com/matbun/ProvML@v0.0.1"]
# prov4ml-macos = ["prov4ml[apple]@git+https://github.com/matbun/ProvML@v0.0.1"]
# prov4ml-nvidia = [
#   "prov4ml[nvidia]@git+https://github.com/matbun/ProvML@v0.0.1",
# ]
# prov4ml-amd = ["prov4ml[amd]@git+https://github.com/matbun/ProvML@v0.0.1"]

[project.urls]
Homepage = "https://www.intertwin.eu/"
Documentation = "https://itwinai.readthedocs.io/"
Repository = "https://github.com/interTwin-eu/itwinai"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
itwinai = "itwinai.cli:app"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests (deselect with '-m \"not integration\"')",
  "hpc: needs SLURM and HPC resources (multiple GPUs/nodes). (deselect with '-m \"not hpc\"')",
  "torch_dist: runs with torch DDP distributed strategy. (deselect with '-m \"not torch_dist\"')",
  "deepspeed_dist: runs with torch DeepSpeed distributed strategy. (deselect with '-m \"not deepspeed_dist\"')",
  "horovod_dist: runs with torch Horovod distributed strategy. (deselect with '-m \"not horovod_dist\"')",
  "ray_dist: uses Ray cluster to distribute compute, for all strategies. (deselect with '-m \"not ray_dist\"')",
  "functional: functional tests. (deselect with '-m \"not functional\"')",
  "memory_heavy: high memory footprint. (deselect with '-m \"not heavy_memory\"')",
  "tensorflow: tests depending on tensorflow. (deselect with '-m \"not tensorflow\"')",
]


[tool.uv]
# This is how you can force uv to accept conflicting extras
conflicts = [[{ extra = "tf-cuda" }, { extra = "torch" }]]

# Use PyTorch with CUDA for anything that is not macos
[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "platform_system != 'Darwin'" }]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]

# Specific index for pytorch
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes: undefined names, unused imports, etc.
  "I",   # isort: import sorting
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear: likely bugs and bad practices (e.g. mutable defaults)
  "C4",  # flake8-comprehensions: unnecessary or suboptimal comprehensions
  "SIM", # flake8-simplify: redundant ifs, returns, boolean logic
  "UP",  # pyupgrade: use modern Python syntax (e.g. f-strings, `Path()` literals)
  "PTH", # flake8-use-pathlib: use pathlib instead of os.path
  "N",   # pep8-naming: naming conventions for classes, functions, variables
]
ignore = [
  "E203",   # Whitespace before ':' – conflicts with Black
  "PTH109", # Allow os.getcwd()
  "PTH122", # Avoid replacing os.path.splitext – Path.suffix drops info (e.g. .tar.gz)
  "PTH123", # Allow use of builtin open() – Path.open() adds no real benefit
  "UP006",  # Keep using typing.List/Dict/Set – prefer consistency over builtin generics
  "UP035",  # Same as above – avoid auto-converting to list[]/dict[] syntax
  "B904",   # Don't require `from err` in CLI code – breaks Typer/Click behavior
  "SIM108", # Don't always use ternary operators — they can be kind of hard to read sometimes
  "N806",   # Allow UPPER_CASE_VARIABLE_NAMES in function scopes (for default values etc.)
  "N812",   # Allow importing stuff as uppercase (e.g. function as F)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-third-party = ["torch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = []

typeCheckingMode = "basic"
pythonPlatform = "Linux"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "error"
